[package]
name = "postgres-sync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-indexer = { git = "https://github.com/KaoImin/ckb-indexer", branch = "mercury" }
ckb-types = "0.43"
clap = "2.33"
jsonrpc-core-client = "18.0"
log = "0.4"
tokio = { version = "1.9", features = ["full"] }
xsql = { git = "https://github.com/nervosnetwork/mercury", branch = "sql" }
